# bfr5c99

./: Dockerfile  README.md  meson.build
include/: bfr5.h  meson.build
src/: bfr5.c  meson.build
tests/: fixed_length_strings.bfr5  main.c  meson.build  variable_length_strings.bfr5
